--- a/base/accounts/templates/login.html
+++ b/base/accounts/templates/login.html
@@ -6,9 +6,11 @@
 </head>
 <body>
 
-<h1>Main page</h1>
-
-Hello {{user.username}}
+<form method="post">
+    {% csrf_token %}
+    {{form.as_p}}
+    <button type="submit">Login</button>
+</form>
 
 </body>
 </html>
