--- a/base/base/templates/navigation_bar.html
+++ b/base/base/templates/navigation_bar.html
@@ -34,6 +34,16 @@
             </ul>
         </div>
 
+        <div class="d-flex align-items-center">
+         
+          {% if user.is_authenticated %}
+            <a href={% url 'accounts:logout' %}>Logout</a>
+          {% else %}
+          <a href={% url 'accounts:register' %}>Register</a> 
+          <a href={% url 'accounts:login' %}>Login</a>
+          {% endif %}
+        </div>  
+
       </div>
     </div>
   </nav>
