Feature | Contaract type filter | This form allows to filter jobs offers by contract type

--- a/base/offers/templates/home_page.html
+++ b/base/offers/templates/home_page.html
@@ -19,6 +19,11 @@
     <button type="submit">Filter by localization</button>
 </form>
 
+<form method="get" action=".">
+    {{contract_form.as_p}}
+    <button type="submit">Filter by contract type</button>
+</form>
+
 <div class="container">
 {% for object in object_list %}
     <h2>Name: {{object.name}}</h2>
