Feature | Remote filter | RemoteFilterForm allows to filter offers by remote value

--- a/base/offers/templates/home_page.html
+++ b/base/offers/templates/home_page.html
@@ -19,6 +19,7 @@
         {{localization_form|crispy}}
         {{contract_form|crispy}}
         {{date_sorting_form|crispy}}
+        {{remote_form|crispy}}
         <button class="btn btn-primary" type="submit">Search</button>
     </form>
     </div>
