--- a/base/offers/templates/home_page.html
+++ b/base/offers/templates/home_page.html
@@ -59,7 +59,7 @@
           <div class="col-md-8">
             <div class="card-body">
             <div class="d-flex justify-content-between">    
-              <h2 class="card-title">{{object.name}}</h2>
+              <a href="/offer/{{object.id}}"><h2 class="card-title">{{object.name}}</h2></a>
               <h5 class="card-title" style="color: green; font-weight: 800">{{object.salary}}</h5>
             </div>  
               <div class="d-flex justify-content-between">
