--- a/base/offers/templates/home_page.html
+++ b/base/offers/templates/home_page.html
@@ -63,7 +63,7 @@
               <h5 class="card-title" style="color: green; font-weight: 800">{{object.salary}}</h5>
             </div>  
               <div class="d-flex justify-content-between">
-                <p class="card-text"><small class="text-body-secondary">{{object.company}}</small></p>
+                <a href="company/{{object.company.id}}"> <p class="card-text"><small class="text-body-secondary">{{object.company}}</small></p> </a>
                 <p class="card-text"><small class="text-body-secondary">{{object.date_created}}</small></p>
                 <p class="card-text"><small class="text-body-secondary">{{object.return_localization}}</small></p>
                 {% if object.return_requirements %}
