Feature | Main company dashboard | CompanyDashboard allows user with role company to see his all active job offers company_required is a decorator which allows to check if current user is has role company If not the function redirect that user to login page

--- a/base/accounts/templates/login.html
+++ b/base/accounts/templates/login.html
@@ -1,16 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% load crispy_forms_tags %}
 
-<form method="post">
-    {% csrf_token %}
-    {{form.as_p}}
-    <button type="submit">Login</button>
-</form>
+{% block meta_title%} Jobs portal | Apply {% endblock %}
 
-</body>
-</html>
+{% block content %}
+
+
+<div class="container">
+    <form method="post">
+        {% csrf_token %}
+        {{form|crispy}}
+        <button class="btn btn-primary" type="submit">Login</button>
+    </form>
+</div>
+
+{% endblock %}
