--- a/base/accounts/templates/company_dashboard.html
+++ b/base/accounts/templates/company_dashboard.html
@@ -24,7 +24,7 @@
                     <p class="card-text"><small class="text-body-secondary">{{object.date_created}}</small></p>
                     <a class="card-text" href="/">Browse candidates</a>
                     <a class="card-text" href="/">All candidates</a>
-                    <a class="card-text" href="/">Edit</a>
+                    <a class="card-text" href={% url 'offers:edit' object.id %}>Edit</a>
                     <a class="card-text" href="/">Delete</a>
                   </div>
                 </div>
