--- a/base/base/templates/navigation_bar.html
+++ b/base/base/templates/navigation_bar.html
@@ -35,9 +35,12 @@
         </div>
 
         <div class="d-flex align-items-center">
-         
+
           {% if user.is_authenticated %}
             <a href={% url 'accounts:logout' %}>Logout</a>
+            {% if user.role == 'company' %}
+            <a href="{% url 'accounts:dashboard' %}">Dashboard</a>
+            {% endif %}
           {% else %}
           <a href={% url 'accounts:register' %}>Register</a> 
           <a href={% url 'accounts:login' %}>Login</a>
