Feature | OfferDeleteView | This view works as a simple form inside company dashboard and allows easly delete job offer. View inherits from DeleteView which is a django generic view

--- a/base/accounts/templates/company_dashboard.html
+++ b/base/accounts/templates/company_dashboard.html
@@ -25,7 +25,10 @@
                     <a class="card-text" href="/">Browse candidates</a>
                     <a class="card-text" href="/">All candidates</a>
                     <a class="card-text" href={% url 'offers:edit' object.id %}>Edit</a>
-                    <a class="card-text" href="/">Delete</a>
+                      <form method="POST" action="{% url 'offers:delete' object.id %}">
+                          {% csrf_token %}
+                          <button type="submit" class="btn btn-danger">DELETE</button>
+                      </form>
                   </div>
                 </div>
               </div>
