--- a/base/accounts/templates/company_dashboard.html
+++ b/base/accounts/templates/company_dashboard.html
@@ -22,9 +22,9 @@
                 </div>
                   <div class="d-flex justify-content-between">
                     <p class="card-text"><small class="text-body-secondary">{{object.date_created}}</small></p>
-                    <a class="card-text" href="/">Browse candidates</a>
+                    <a class="card-text" href="{% url 'offers:applications' object.id %}">Browse candidates</a>
                     <a class="card-text" href="/">All candidates</a>
-                    <a class="card-text" href={% url 'offers:edit' object.id %}>Edit</a>
+                    <a class="card-text" href="{% url 'offers:edit' object.id %}">Edit</a>
                       <form method="POST" action="{% url 'offers:delete' object.id %}">
                           {% csrf_token %}
                           <button type="submit" class="btn btn-danger">DELETE</button>
