Feature | ProfileUpdateView | This view inherits from django build in generic view - UpdateView View allows log in user to edit profile informations like: first/last name, email, username, image and more

--- a/base/accounts/templates/company_dashboard.html
+++ b/base/accounts/templates/company_dashboard.html
@@ -8,7 +8,7 @@
 
 <div class="container">
     <a href="{% url 'offers:create' %}">Add new offer</a>
-    <a href="/">Edit company information</a>
+    <a href="{% url 'accounts:update_profile' user.id %}">Edit company information</a>
 </div>
 
 <div class="container">
