--- a/base/accounts/templates/company_dashboard.html
+++ b/base/accounts/templates/company_dashboard.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
 
-{% block meta_title%} Jobs portal | Apply {% endblock %}
+{% block meta_title%} Jobs portal | {{user.username}} {% endblock %}
 
 {% block content %}
 
