--- a/base/accounts/templates/profile_update.html
+++ b/base/accounts/templates/profile_update.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
 
-{% block meta_title%} Jobs portal | Applications {% endblock %}
+{% block meta_title%} Jobs portal | Update profile data {% endblock %}
 
 {% block content %}
 
