Feature | Links in user profile, company dashboard and login form for password reset

--- a/base/accounts/templates/company_dashboard.html
+++ b/base/accounts/templates/company_dashboard.html
@@ -9,6 +9,7 @@
 <div class="container">
     <a href="{% url 'accounts:create' %}">Add new offer</a>
     <a href="{% url 'accounts:update_profile' user.id %}">Edit company information</a>
+    <a href="{% url 'accounts:change_password' %}">Change password</a>
 </div>
 
 <div class="container">
