--- a/base/accounts/templates/login.html
+++ b/base/accounts/templates/login.html
@@ -11,6 +11,7 @@
         {% csrf_token %}
         {{form|crispy}}
         <button class="btn btn-primary" type="submit">Login</button>
+        <a href="{% url 'accounts:change_password' %}">Change password</a>
     </form>
 </div>
 
