--- a/base/accounts/templates/user_profile.html
+++ b/base/accounts/templates/user_profile.html
@@ -8,6 +8,7 @@
 
 <div class="container">
     <a href="{% url 'accounts:update_profile' user.id %}">Edit your information</a>
+    <a href="{% url 'accounts:change_password' %}">Change password</a>
 </div>
 
 
