--- a/base/accounts/templates/profile_update.html
+++ b/base/accounts/templates/profile_update.html
@@ -6,8 +6,11 @@
 {% block content %}
 
 <div class="container">
-  {{form|crispy}}
-  <button class="btn btn-primary">Update profile</button>
+  <form method="post" enctype="multipart/form-data">
+    {% csrf_token %}
+    {{form|crispy}}
+    <button class="btn btn-primary" type="submit">Update profile</button>
+  <form>
 </div>
 
 
