Feature | App status | app status is a 'answer' field in application model After sending email by company this status is changed into True and displayed in dashboard

--- a/base/accounts/templates/applications_list.html
+++ b/base/accounts/templates/applications_list.html
@@ -49,10 +49,10 @@
         <td>No resume</td>
       {% endif %}
       <td>
-        {%if object.anwer%}
-        Yes 
+        {% if object.answer %}
+          Yes 
         {% else %}
-        No
+          No
         {% endif %}
       </td>
       <td>
