--- a/base/offers/templates/home_page.html
+++ b/base/offers/templates/home_page.html
@@ -44,22 +44,24 @@
     </form>   
 </div>
 
-
+{% if object_list %}
 <div class="container">
 {% for object in object_list %}
     <div class="card mb-5 mt-5" style="max-width: 1400px;">
         <div class="row g-0">
           <div class="col-md-4">
             {% if object.company.image %}
-            <img src="http://127.0.0.1:8000/media/{{object.company.image}}" class="img-fluid rounded-start" alt={{pbject.company.name}}>
+            <a href="/offer/{{object.id}}">
+            <img style="width: 250px; height: 100px;" class="mx-auto d-block pt-3 pb-3" src="http://127.0.0.1:8000/media/{{object.company.image}}" class="img-fluid rounded-start" alt={{object.company.name}}></a>
             {% else %}
-            <img src="https://www.allianceplast.com/wp-content/uploads/no-image-1024x1024.png" class="img-fluid rounded-start" alt="no image" />
+            <a href="/offer/{{object.id}}">
+            <img style="width: 320px; height: 100px;" class="mx-auto d-block pt-3 pb-3" src="https://www.allianceplast.com/wp-content/uploads/no-image-1024x1024.png" class="img-fluid rounded-start" alt="no image" /></a>
             {% endif %}
           </div>
           <div class="col-md-8">
             <div class="card-body">
             <div class="d-flex justify-content-between">    
-              <a href="/offer/{{object.id}}"><h2 class="card-title">{{object.name}}</h2></a>
+              <a style="text-decoration: none; color: black;" href="/offer/{{object.id}}"><h2 class="card-title">{{object.name}}</h2></a>
               <h5 class="card-title" style="color: green; font-weight: 800">{{object.salary}}</h5>
             </div>  
               <div class="d-flex justify-content-between">
@@ -76,5 +78,12 @@
       </div>
 {% endfor %}
 </div>
+{% else %}
+<div class="text-center pt-5 pb-5">
+  <h1>There is no offers&#128531;</h1>
+</div>
+{% endif %}
+
+
 {% include "pagination.html" %}
 {% endblock %}
