--- a/base/offers/templates/home_page.html
+++ b/base/offers/templates/home_page.html
@@ -27,7 +27,7 @@
 
 
 
-<div class="container">
+<div class="container mt-5">
     <form method="get" action=".">
         <div class="row">
             <div class="col">
