--- a/base/accounts/templates/company_dashboard.html
+++ b/base/accounts/templates/company_dashboard.html
@@ -7,9 +7,9 @@
 
 
 <div class="container">
-    <a href="{% url 'accounts:create' %}">Add new offer</a>
-    <a href="{% url 'accounts:update_profile' user.id %}">Edit company information</a>
-    <a href="{% url 'accounts:change_password' %}">Change password</a>
+    <a class="btn btn-primary" role="button" href="{% url 'accounts:create' %}">Add new offer</a>
+    <a class="btn btn-primary" role="button" href="{% url 'accounts:update_profile' user.id %}">Edit company information</a>
+    <a class="btn btn-primary" role="button" href="{% url 'accounts:change_password' %}">Change password</a>
 </div>
 
 <div class="container">
@@ -23,8 +23,8 @@
                 </div>
                   <div class="d-flex justify-content-between">
                     <p class="card-text"><small class="text-body-secondary">{{object.date_created}}</small></p>
-                    <a class="card-text" href="{% url 'accounts:applications' object.id %}">Browse candidates</a>
-                    <a class="card-text" href="{% url 'accounts:edit' object.id %}">Edit</a>
+                    <a class="btn btn-primary" role="button" class="card-text" href="{% url 'accounts:applications' object.id %}">Browse candidates</a>
+                    <a class="btn btn-primary" role="button" class="card-text" href="{% url 'accounts:edit' object.id %}">Edit</a>
                       <form method="POST" action="{% url 'accounts:delete' object.id %}">
                           {% csrf_token %}
                           <button type="submit" class="btn btn-danger">DELETE</button>
