--- a/base/accounts/templates/company_dashboard.html
+++ b/base/accounts/templates/company_dashboard.html
@@ -25,6 +25,10 @@
                     <p class="card-text"><small class="text-body-secondary">{{object.date_created}}</small></p>
                     <a class="btn btn-primary" role="button" class="card-text" href="{% url 'accounts:applications' object.id %}">Browse candidates</a>
                     <a class="btn btn-primary" role="button" class="card-text" href="{% url 'accounts:edit' object.id %}">Edit</a>
+                    <a class="btn btn-primary" role="button" class="card-text" href="{% url 'accounts:generate_csv' object.id %}">
+                        Generate csv file 
+                    </a>
+                    
                       <form method="POST" action="{% url 'accounts:delete' object.id %}">
                           {% csrf_token %}
                           <button type="submit" class="btn btn-danger">DELETE</button>
