--- a/base/offers/templates/companies_list.html
+++ b/base/offers/templates/companies_list.html
@@ -4,34 +4,35 @@
 
 {% block content %}
 
-
+{% for object in object_list %}
+<div class="container">
+      <div class="card mb-5 mt-5" style="max-width: 1400px;">
+          <div class="row g-0">
+            <div class="col-md-4">
+              {% if object.image %}
+              <a href="/offer/{{object.id}}">
+              <img style="width: 250px; height: 120px;" class="mx-auto d-block pt-3 pb-3" src="http://127.0.0.1:8000/media/{{object.image}}" class="img-fluid rounded-start" alt={{object.name}}></a>
+              {% else %}
+              <a href="/offer/{{object.id}}">
+              <img style="width: 320px; height: 300px;" class="mx-auto d-block pt-3 pb-3" src="https://www.allianceplast.com/wp-content/uploads/no-image-1024x1024.png" class="img-fluid rounded-start" alt="no image" /></a>
+              {% endif %}
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+              <div class="d-flex justify-content-between">    
+                <a style="text-decoration: none; color: black;" href="/offer/{{object.id}}"><h2 class="card-title">{{object.username}}</h2></a>
+              </div>  
+                <div class="d-flex justify-content-between">
+                  <p class="card-text"><small class="text-body-secondary">{{object.description}}</small></p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+  </div>
+{% endfor %}
 
     
-    {% comment %} Description: {{object.description}} <br> {% endcomment %}
-
-
-<div class="row row-cols-1 row-cols-md-2 g-4">
-    {% for object in object_list %}
-    <div class="col">
-      <div class="card">
-        {% if object.image %}
-        <a href="/offer/{{object.id}}">
-            <img style="width: 250px; height: 100px;" class="card-img-top" src="http://127.0.0.1:8000/media/{{object.image}}" class="img-fluid rounded-start" alt={{object.name}}></a>
-        {% else %}
-        <a href="/offer/{{object.id}}">
-            <img style="width: 250px; height: 100px;" class="card-img-top" src="https://www.allianceplast.com/wp-content/uploads/no-image-1024x1024.png" class="img-fluid rounded-start" alt="no image" /></a>
-        {% endif %}
-
-        <div class="card-body">
-        <a href="company/{{object.id}}">
-          <h5 class="card-title">{{object.username}}</h5>
-        </a>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        </div>
-      </div>
-    </div>
-    {% endfor %}
-  </div>
 
 {% include "pagination.html" %}
 
