--- a/base/base/templates/navigation_bar.html
+++ b/base/base/templates/navigation_bar.html
@@ -35,18 +35,27 @@
         </div>
 
         <div class="d-flex align-items-center">
-
-          {% if user.is_authenticated %}
-            <a href={% url 'accounts:logout' %}>Logout</a>
-            {% if user.role == 'company' %}
-            <a href="{% url 'accounts:dashboard' %}">Dashboard</a>
-            {% elif user.role == 'user' %}
-            <a href="{% url 'accounts:user_profile' %}">Profile</a>
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0"> 
+            <li class="nav-item">
+              {% if user.role == 'company' %}
+                <a style="color: black; font-weight: 600" class="nav-link" href="{% url 'accounts:dashboard' %}"> Dashboard </a>
+                {% elif user.role == 'user' %}
+                <a style="color: black; font-weight: 600" class="nav-link" href="{% url 'accounts:user_profile' %}"> Profile </a>
+              {% endif %}
+            </li>
+            {% if user.is_authenticated %}
+            <li class="nav-item">
+              <a class="nav-link" href={% url 'accounts:logout' %}> Logout </a>
+            </li>            
+            {% else %}
+            <li class="nav-item">
+              <a class="nav-link" href={% url 'accounts:register' %}> Register </a> 
+            </li>
+            <li class="nav-item">
+            <a class="nav-link" href={% url 'accounts:login' %}> Login </a>
+            </li>
             {% endif %}
-          {% else %}
-          <a href={% url 'accounts:register' %}>Register</a> 
-          <a href={% url 'accounts:login' %}>Login</a>
-          {% endif %}
+          </ul>
         </div>  
 
       </div>
