--- a/base/accounts/templates/auth/change_password.html
+++ b/base/accounts/templates/auth/change_password.html
@@ -5,6 +5,9 @@
 
 {% block content %}
 
+<div class="p-5 mt-5 text-center">
+    <h1 class="mb-5">Change password</h1>
+</div>
 
 <div class="container">
     <form method="post">
