--- a/base/accounts/templates/auth/register_user.html
+++ b/base/accounts/templates/auth/register_user.html
@@ -5,12 +5,17 @@
 
 {% block content %}
 
-<div class="container">
+<div class="p-5 mt-5 text-center">
+    <h1 class="mb-5">Sign up</h1>
+</div>
+
+<div class="container mt-5 mb-5">
     <form method="post">
         {% csrf_token %}
         {{form|crispy}}
-        <button class="btn btn-primary" type="submit">Register</button>
+        <button class="btn btn-success" type="submit">Register</button>
     </form>
+    <a href="{% url 'accounts:login' %}">If you already have an account, log in here</a>
 </div>
 
 {% endblock %}
