--- a/base/accounts/templates/offer_create.html
+++ b/base/accounts/templates/offer_create.html
@@ -4,6 +4,9 @@
 
 {% block content %}
 
+<div class="p-5 mt-5 text-center">
+  <h1 class="mb-5">Create new offer</h1>
+</div>
 
 <div class="container">
   <form method="post">
