--- a/base/accounts/templates/profile/profile_update.html
+++ b/base/accounts/templates/profile/profile_update.html
@@ -5,6 +5,10 @@
 
 {% block content %}
 
+<div class="p-5 mt-5 text-center">
+  <h1 class="mb-5">Edit information</h1>
+</div>
+
 <div class="container">
   <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
