--- a/base/accounts/templates/return_app_feedback.html
+++ b/base/accounts/templates/return_app_feedback.html
@@ -5,7 +5,9 @@
 
 {% block content %}
 
-{{application}}
+<div class="p-5 mt-5 text-center">
+    <h1 class="mb-5">Send feedback</h1>
+</div>
 
 <div class="container">
     <form method="post">
