--- a/base/offers/templates/apply_for_offer.html
+++ b/base/offers/templates/apply_for_offer.html
@@ -5,6 +5,10 @@
 
 {% block content %}
 
+<div class="p-5 mt-5 text-center">
+    <h1 class="mb-5">Apply for an offer</h1>
+</div>
+
 <div class="container">
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
