--- a/base/base/templates/navigation_bar.html
+++ b/base/base/templates/navigation_bar.html
@@ -3,8 +3,8 @@
       <button
         class="navbar-toggler"
         type="button"
-        data-toggle="collapse"
-        data-target="#navbarSupportedContent"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent"
         aria-expanded="false"
         aria-label="Toggle navigation"
@@ -35,27 +35,33 @@
         </div>
 
         <div class="d-flex align-items-center">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0"> 
-            <li class="nav-item">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item" style="margin-right: 10px">
               {% if user.role == 'company' %}
                 <a style="color: black; font-weight: 600" class="nav-link" href="{% url 'accounts:dashboard' %}"> Dashboard </a>
                 {% elif user.role == 'user' %}
                 <a style="color: black; font-weight: 600" class="nav-link" href="{% url 'accounts:user_profile' %}"> Profile </a>
               {% endif %}
             </li>
+          </ul>
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             {% if user.is_authenticated %}
             <li class="nav-item">
-              <a class="nav-link" href={% url 'accounts:logout' %}> Logout </a>
+              <a class="nav-link" href="{% url 'accounts:logout' %}"> Logout </a>
             </li>            
             {% else %}
-            <li class="nav-item">
-              <a class="nav-link" href={% url 'accounts:register' %}> Register </a> 
-            </li>
-            <li class="nav-item">
-            <a class="nav-link" href={% url 'accounts:login' %}> Login </a>
-            </li>
-            {% endif %}
           </ul>
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item" style="margin-right: 10px">
+              <a class="nav-link" href="{% url 'accounts:register' %}"> Register </a>
+            </li>
+          </ul>
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+            <a class="nav-link" href="{% url 'accounts:login' %}"> Login </a>
+            </li>
+          </ul>
+            {% endif %}
         </div>  
 
       </div>
