Style bugfix | Company dashboard | I fixed overlapping buttons in company dashboard

--- a/base/accounts/templates/profile/profile_update.html
+++ b/base/accounts/templates/profile/profile_update.html
@@ -7,6 +7,7 @@
 
 <div class="p-5 mt-5 text-center">
   <h1 class="mb-5">Edit information</h1>
+  <a class="btn btn-primary" role="button" href="{% url 'accounts:change_password' %}">Change password</a>
 </div>
 
 <div class="container">
