--- a/base/accounts/templates/profile/company_dashboard.html
+++ b/base/accounts/templates/profile/company_dashboard.html
@@ -9,7 +9,6 @@
 <div class="container">
     <a class="btn btn-primary" role="button" href="{% url 'accounts:create' %}">Add new offer</a>
     <a class="btn btn-primary" role="button" href="{% url 'accounts:update_profile' user.id %}">Edit company information</a>
-    <a class="btn btn-primary" role="button" href="{% url 'accounts:change_password' %}">Change password</a>
 </div>
 
 <div class="container">
@@ -23,15 +22,15 @@
                 </div>
                   <div class="d-flex justify-content-between">
                     <p class="card-text"><small class="text-body-secondary">{{object.date_created}}</small></p>
-                    <a class="btn btn-primary" role="button" class="card-text" href="{% url 'accounts:applications' object.id %}">Browse candidates</a>
-                    <a class="btn btn-primary" role="button" class="card-text" href="{% url 'accounts:edit' object.id %}">Edit</a>
-                    <a class="btn btn-primary" role="button" class="card-text" href="{% url 'accounts:generate_csv' object.id %}">
-                        Generate csv file 
+                    <a class="card-text" href="{% url 'accounts:applications' object.id %}">Candidates</a>
+                    <a class="card-text" href="{% url 'accounts:edit' object.id %}">Edit</a>
+                    <a class="card-text" href="{% url 'accounts:generate_csv' object.id %}">
+                        CSV
                     </a>
                     
                       <form method="POST" action="{% url 'accounts:delete' object.id %}">
                           {% csrf_token %}
-                          <button type="submit" class="btn btn-danger">DELETE</button>
+                          <button style="margin-left: 10px" type="submit" class="btn btn-danger">DELETE</button>
                       </form>
                   </div>
                 </div>
