--- a/base/accounts/templates/applications_list.html
+++ b/base/accounts/templates/applications_list.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 
-<div class="container">
+<div class="table-responsive">
   <table class="table table-hover">
   <thead class="thead-dark">
     <tr>
