--- a/base/base/templates/navigation_bar.html
+++ b/base/base/templates/navigation_bar.html
@@ -29,7 +29,7 @@
                 <a class="nav-link" href="/companies">Companies</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/">Knowledge Base</a>
+                <a class="nav-link" href="/study">Knowledge Base</a>
             </li>
             </ul>
         </div>
