Feature | Sorting by date | DateSortingForm inherits from django Form and allows to sort objects from Resources model by date, from the newest to oldest and oldest to newest

--- a/base/study/templates/study_home_page_list.html
+++ b/base/study/templates/study_home_page_list.html
@@ -9,6 +9,10 @@
     <h1 class="mb-5">Learn new things with us</h1>
 </div>
 
+<form>
+    {{date_sorting_form|crispy}}
+    <button type="submit" class="btn btn-primary">Sort by date</button>
+</form>
 
 <div class="container">
     {% for object in object_list %}
