--- a/base/offers/templates/offer_detail.html
+++ b/base/offers/templates/offer_detail.html
@@ -8,6 +8,9 @@
     <a style="text-decoration: none; color: black;"href="{% url "offers:company" object.company.id %}">
         <h2 style="font-size: 40px; font-weight: 600">{{object.company.username}}</h2>
     </a>
+    <a href="#">
+        <h6>Company rate {{avg_rating}}/5</h6>
+    </a>
     <a href="{% url "offers:company" object.company.id %}">
     <img src="http://127.0.0.1:8000/media/{{object.company.image}}" class="img-fluid rounded-start" alt={{pbject.company.name}}>
     </a>
